# Physical-AI-and-Humanoid-Robotics-Book

./: .gitignore  CLAUDE.md  README.md  check_qdrant.py  debug_retrieve.py  package-lock.json  requirements.txt
auth-skills/: README.md  USAGE.md  index.ts  package.json
auth-skills/login/: index.ts
auth-skills/logout/: index.ts
auth-skills/middleware/: index.ts
auth-skills/password-reset/: index.ts
auth-skills/registration/: index.ts
auth-skills/session-validation/: index.ts
auth-skills/token-refresh/: index.ts
backend/: .env.test  __init__.py  main.py  pyproject.toml  retrieve.py
history/prompts/001-digital-twin/: 0001-specify-module-2-digital-twin.spec.prompt.md  0002-plan-module-2-digital-twin.plan.prompt.md  0003-tasks-module-2-digital-twin.tasks.prompt.md  0004-implement-module-2-digital-twin.green.prompt.md
physical-ai-book/: docusaurus.config.js  package-lock.json  sidebars.js
physical-ai-book/docs/: intro.mdx
specs/001-digital-twin/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-physical-ai-ros2/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-retrieval-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-docusaurus-build-rectification/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-physical-ai-modules-3-4/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-url-embedding-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+51 files in other folders)
