[project]
name = "docusaurus-ingestion-pipeline"
version = "0.1.0"
description = "Docusaurus → Cohere → Qdrant Ingestion Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cohere>=4.0.0",
    "qdrant-client>=1.9.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]
